--- a/app/src/main/res/layout/fragment_book_details.xml
+++ b/app/src/main/res/layout/fragment_book_details.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BookDetailsFragment"
+    tools:context=".main.fragment.BookDetailsFragment"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <TextView
         android:id="@+id/title_textView"
@@ -63,7 +64,7 @@
         android:text="@string/checkout_date"/>
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/checkoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="148dp"
@@ -71,6 +72,5 @@
         android:text="@string/checkout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkoutTextView" />
-
 
 </android.support.constraint.ConstraintLayout>
