--- a/app/src/main/res/layout/checkout_dialog.xml
+++ b/app/src/main/res/layout/checkout_dialog.xml
@@ -9,7 +9,7 @@
 
     <EditText
         android:id="@+id/dialogNameEt"
-        android:hint="Enter Name"
+        android:hint="@string/enter_name"
         android:inputType="textPersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -21,7 +21,7 @@
         android:orientation="horizontal"
         android:gravity="center">
         <Button
-            android:id="@+id/dialogLoginBtn"
+            android:id="@+id/dialogCheckoutBtn"
             android:text="@string/checkout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
