--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -4,6 +4,6 @@
     <item android:id="@+id/add_book"
         android:title="@string/add_book"/>
 
-    <item android:id="@+id/help"
+    <item android:id="@+id/delete_books"
         android:title="@string/remove_books" />
 </menu>
