--- a/app/src/main/res/layout/deletebook_dialog.xml
+++ b/app/src/main/res/layout/deletebook_dialog.xml
@@ -7,13 +7,12 @@
     android:layout_gravity="center"
     android:padding="10dp">
 
-    <EditText
+    <TextView
         android:id="@+id/dialogDeleteTextView"
-        android:hint="@string/enter_name"
-        android:inputType="textPersonName"
+        android:hint="@string/do_you_want_to_delete_this_book"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +21,7 @@
         android:gravity="center">
         <Button
             android:id="@+id/dialogDeleteBtn"
-            android:text="@string/checkout"
+            android:text="@string/delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <Button
