add FragmentTransaction for add books menu click

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,5 +5,5 @@
         android:title="@string/add_book"/>
 
     <item android:id="@+id/delete_books"
-        android:title="@string/remove_books" />
+        android:title="@string/delete_all_books" />
 </menu>
