--- a/app/src/main/res/layout/delete_all_dialog.xml
+++ b/app/src/main/res/layout/delete_all_dialog.xml
@@ -7,13 +7,12 @@
     android:layout_gravity="center"
     android:padding="10dp">
 
-    <EditText
-        android:id="@+id/dialogDeleteTextView"
-        android:hint="@string/enter_name"
-        android:inputType="textPersonName"
+    <TextView
+        android:id="@+id/dialogDeleteAllTextView"
+        android:hint="@string/do_you_want_to_delete_all_books"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,13 +20,13 @@
         android:orientation="horizontal"
         android:gravity="center">
         <Button
-            android:id="@+id/dialogDeleteBtn"
-            android:text="@string/checkout"
+            android:id="@+id/dialogDeleteAllBtn"
+            android:text="@string/delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <Button
-            android:id="@+id/deleteCancelBtn"
-            android:text="Cancel"
+            android:id="@+id/deleteAllCancelBtn"
+            android:text="@string/cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
